--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "dayjs": "^1.10.5",
     "egg": "^2.15.1",
     "egg-axios": "^1.1.5",
     "egg-jwt": "^3.1.7",
